log
Thu 09 May 2024 09:15:24 PM UTC: 
 tests:  1|8
total_score: 0/70
825f829
Thu 09 May 2024 09:32:20 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b82de08
Thu 09 May 2024 09:34:11 PM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2d61d09
Thu 09 May 2024 09:35:32 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|7
total_score: 5/70
813e8ec
Thu 09 May 2024 09:37:37 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  12|6
total_score: 15/70
6840cd1
Thu 09 May 2024 09:38:09 PM UTC: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  12|6
total_score: 15/70
228bd5e
Thu 09 May 2024 09:41:41 PM UTC: 
 treemap.c | 42 +++++-------------------------------------
 1 file changed, 5 insertions(+), 37 deletions(-)
 tests:  13|5
total_score: 15/70
7ce3967
Thu 09 May 2024 09:43:02 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 20/70
e98606b
Thu 09 May 2024 09:45:07 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  0|0
511ef49
Thu 09 May 2024 09:45:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:123:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  123 |     return ub;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
580fff8
Thu 09 May 2024 09:46:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54cfb57
Thu 09 May 2024 09:46:57 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  19|3
total_score: 30/70
c657063
Thu 09 May 2024 09:51:58 PM UTC: 
 treemap.c | 39 +++++++++++++++++++++++++++++----------
 1 file changed, 29 insertions(+), 10 deletions(-)
 tests:  20|3
total_score: 30/70
bb7cc54
Thu 09 May 2024 09:52:42 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  21|2
total_score: 40/70
3e1621f
Thu 09 May 2024 09:52:56 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  21|2
total_score: 40/70
6acd314
Thu 09 May 2024 09:56:17 PM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:113:24: error: unused variable ‘grandparent’ [-Werror=unused-variable]
  113 |             TreeNode * grandparent = node->parent;
      |                        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
83f0fe6
Thu 09 May 2024 09:56:30 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
4c6e1f1
Thu 09 May 2024 09:56:42 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
a3fe4ae
Thu 09 May 2024 09:57:17 PM UTC: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|0
4aa59e7
Thu 09 May 2024 09:59:26 PM UTC: 
 treemap.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  0|0
8c22ca8
Thu 09 May 2024 10:06:51 PM UTC: 
 treemap.c | 34 +++++++++++++---------------------
 1 file changed, 13 insertions(+), 21 deletions(-)
 tests:  0|0
c90f051
